force-app/main/default/objects/HRS_4S_Discrepancy__c/HRS_4S_Discrepancy__c.object-meta.xml
<CustomObject>
    <label>HRS 4S Discrepancy</label>
    <nameField>
        <displayFormat>HRS 4S Disc-{000000}</displayFormat>
        <label>HRS 4S Discrepancy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HRS 4S Discrepancy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>