force-app/main/default/objects/HRS_4S_Discrepancy__c/fields/Large_Market__c.field-meta.xml
<CustomField>
    <fullName>Large_Market__c</fullName>
    <formula>Account__r.X401k_Large_Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Large Market</label>
    <type>Checkbox</type>
</CustomField>