force-app/main/default/objects/HRS_4S_Discrepancy__c/fields/MATC_Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>MATC_Discrepancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MATC Discrepancy</label>
    <type>Checkbox</type>
</CustomField>