force-app/main/default/objects/HRS_4S_Discrepancy__c/fields/Setup_Pod__c.field-meta.xml
<CustomField>
    <fullName>Setup_Pod__c</fullName>
    <label>Setup Pod</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conversions A</fullName>
            </value>
            <value>
                <fullName>Conversions B</fullName>
            </value>
            <value>
                <fullName>Conversions C</fullName>
            </value>
            <value>
                <fullName>New Case 1</fullName>
            </value>
            <value>
                <fullName>New Case 2</fullName>
            </value>
            <value>
                <fullName>New Case 3</fullName>
            </value>
            <value>
                <fullName>New Case 4</fullName>
            </value>
            <value>
                <fullName>New Case 5</fullName>
            </value>
            <value>
                <fullName>New Case 6</fullName>
            </value>
            <value>
                <fullName>New Case 7</fullName>
            </value>
            <value>
                <fullName>New Case 8</fullName>
            </value>
            <value>
                <fullName>New Case 9</fullName>
            </value>
            <value>
                <fullName>New Case 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>