force-app/main/default/objects/HRS_4S_Discrepancy__c/recordTypes/HRS_4S_Discrepancy_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>HRS_4S_Discrepancy_Record_Type</fullName>
    <active>true</active>
    <label>HRS 4S Discrepancy Record Type</label>
</RecordType>